@@ -241,6 +241,7 @@ Stephen Goetze
 Steve Cohen
 Steve Loughran
 Steve Morin
+Steve Wadsworth
 Steven E. Newton
 Takashi Okamoto
 Taoufik Romdhane
